<resources>
    <string name="app_name">KoruCare</string>
    <string name="greeting">Hello!</string>
    <string name="welcome_message">Nau mai haere mai</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="read_more">Read More</string>
    <string name="meet_the_team">Meet the team</string>

    <!-- Home -->
    <string name="info_button">Information</string>
    <string name="process_of_escorting_button">Process of Escorting</string>
    <string name="legal_rights_button">Your legal rights</string>
    <string name="quiz_button">Take Quiz</string>

    <!-- Information -->
    <string name="info_hd1">What is Escorting?</string>
    <string name="info_txt1">Escorting is the process of removing, relocating, and uplifting tamariki and rangatahi from their current place of care. When choosing escort kaimahi to carry out an escort, we must ensure that kaimahi are not working to the point of tiredness, fatigue or stress that hinders their ability to carry out their escort responsibilities.</string>
    <string name="info_hd2">Types of Escorts</string>
    <string name="info_txt2">Scheduled escorts are arranged for court hearings, appointments, and planned transfers, while unscheduled escorts respond to emergencies such as unexpected court outcomes. After-hours escorts, happening between specific times, need a risk assessment and approval. Escorts ensure vehicle safety and follow travel rules, with supervised stops ensuring child safety. In emergencies, escorts prioritize child well-being, contacting managers promptly.</string>

    <!-- Escorting -->
    <string name="escorting_title">Escorting</string>
    <string name="escorting_txt">Escorting involves the relocation and transfer of tamariki and rangatahi from their current care settings. It\'s essential to ensure that escort kaimahi are not excessively fatigued or stressed, considering factors such as their total weekly and daily working hours. Additionally, the anticipated duration of the escort and whether accommodation is required along the route should be taken into account to support the well-being of both the kaimahi and te tamaiti or rangatahi.\n\nWhen selecting kaimahi for an escort, careful consideration is given to their training and qualifications. This includes proficiency in de-escalation techniques, such as Safety Interventions Foundation Level (formerly known as MAPA) or STAR training for Oranga Tamariki staff, or equivalent training for contracted personnel. For escorts involving air travel to or from youth justice residences or remand homes, specific handcuff training is mandated. The appropriate number of kaimahi required to safely conduct the escort is also determined based on these considerations.\n\nPlanning for road escorts also involves adherence to the Oranga Tamariki driver and vehicle policy. Measures are taken to prevent kaimahi from driving while fatigued. Strategies may include arranging for kaimahi from the destination site to meet halfway, thereby reducing overall driving time. Ensuring an adequate number of licensed drivers are present on the escort team allows for necessary breaks during the journey, promoting the safety and well-being of all involved.</string>

    <!-- Types of Escorts -->
    <string name="types_title">Types of Escorts</string>
    <string name="types_h1">Scheduled Escorts</string>
    <string name="types_txt1">Scheduled escorts are pre-arranged for tasks such as internal transfers, court hearings, family group conferences, planned appointments, remand placements under section 238(1)(d), and custody placements under section 235.</string>
    <string name="types_h2">Unscheduled Escorts</string>
    <string name="types_txt2">Unscheduled escorts are not pre-arranged and occur in response to emergencies or unexpected events, such as unplanned appointments, unexpected court outcomes, or sudden remand placements under section 238(1)(d) or custody under section 235.</string>
    <string name="types_h3">After-hours Escorts</string>
    <string name="types_txt3">After-hours escorts take place between 5pm and 8.30am on weekdays, and throughout weekends and public holidays. Unscheduled after-hours escorts require a risk assessment and approval by the National Contact Centre supervisor or youth justice afterhours supervisor.</string>
    <string name="types_h4">Escorting by Road</string>
    <string name="types_txt4">Road escorts ensure that kaimahi have a charged mobile phone, contact details for emergencies, sufficient fuel, and secure vehicle settings. Te tamaiti or rangatahi sits in the back with an escort, and safety protocols are followed during emergencies, planned stops, and compliance with travel policies.</string>
    <string name="types_h5">Escorting by Air</string>
    <string name="types_txt5">Air escorts require thorough planning and risk assessment. Kaimahi must follow airline protocols, check in early, carry appropriate documentation, and follow crew instructions. Incidents must be reported promptly, and handcuffs may be used only under pilot direction for specific cases.</string>

    <!-- Process of Escorting -->
    <string name="proc_title">Processes of Escorting</string>
    <string name="proc_text">Anyone can contact Oranga Tamariki or the police if they think a child has been harmed or abused or neglected (including emotional harm), or if they have concerns about the child’s wellbeing. Oranga Tamariki also get reports from people worried about a child’s behaviour.\n\nSometimes reports come from members of the community. In some cases, they may come from officials in the government or courts – for example, the Family Court if it’s concerned about a child who’s involved in a case at the court.\n\nReports to Oranga Tamariki can be made to their National Contact Centre phone line (0508 FAMILY – 0508 326 459). The National Contact Centre also gets emails, letters and faxes.\n\nYou can agree with Oranga Tamariki (or a service like Barnardos) that they’ll look after your child for a time, which in some cases could be up to a year.\n\nEscorting tamariki or rangatahi may be necessary for the oranga (wellbeing, health, safety and security) of te tamaiti or rangatahi, other tamariki or rangatahi, escort kaimahi or the public.\n\nIn all instances, we must ensure that te tamaiti or rangatahi is escorted in a manner that upholds and protects their mana and promotes their oranga.\n\nUnless a risk in sharing all information has been identified in the risk assessment, we must uphold the right of te tamaiti or rangatahi and their whānau or family to be fully informed of the proposed escort, including the destination, as soon as practicable, and any views they have taken into account.</string>

    <!-- Your Legal Rights -->
    <string name="rights_title">What are your rights?</string>
    <string name="rights_h1">Legal Rights of Parents.</string>
    <string name="rights_txt1">When Oranga Tamariki applies for Care or Protection Orders, parents retain specific legal rights related to escorting their children during various stages of the process. Parents are entitled to be informed about the court applications and are given copies of relevant documents, including any temporary custody orders. During court proceedings, parents can challenge or accept the orders and plans proposed by Oranga Tamariki, which may include aspects of escorting their child to court or other mandated appointments. Furthermore, in cases where the Family Court appoints a lawyer to represent the child, parents are notified of the lawyer’s identity, ensuring they can participate in the process, including any escorting duties that might be required.</string>
    <string name="rights_h2">Legal Rights of Caregivers</string>
    <string name="rights_txt2">Caregivers, while not having the same legal status as parents or guardians, are involved in the escorting process under specific guidelines set forth by Oranga Tamariki. In instances where a child is placed in a care and protection residence, caregivers are informed of the child’s rights and the necessary procedures, including escorting the child to and from various appointments or court hearings. The national care standards also ensure that caregivers are supported in their role, which includes understanding their responsibilities in escorting the child and maintaining their well-being. Caregivers must adhere to the detailed plans and orders from Oranga Tamariki, which specify their roles and any escorting duties to ensure the child\'s safety and proper care.</string>

    <!-- Quiz -->
    <string name="congratulation">Congratulations!</string>
    <string name="completed_quiz">You completed the quiz</string>
    <string name="finish">Finish</string>

</resources>